--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start":"nodemon server.js"
   },
   "author": "Tran Van Vu",
   "license": "ISC",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.2"
   }
 }
